force-app/main/default/objects/bpats__ASM_Education_History__c/bpats__ASM_Education_History__c.object-meta.xml
<CustomObject>
    <label>Education History</label>
    <nameField>
        <displayFormat>EDU-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Education Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>