force-app/main/default/objects/bpats__ASM_Education_History__c/fields/bpats__Contact__c.field-meta.xml
<CustomField>
    <fullName>bpats__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Education Histories</relationshipLabel>
    <relationshipName>ASM_Education_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>