force-app/main/default/objects/bpats__ASM_Education_History__c/fields/bpats__Degree_Type__c.field-meta.xml
<CustomField>
    <fullName>bpats__Degree_Type__c</fullName>
    <label>Degree Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>