force-app/main/default/objects/bpats__ASM_Education_History__c/fields/bpats__Major__c.field-meta.xml
<CustomField>
    <fullName>bpats__Major__c</fullName>
    <label>Major</label>
    <length>255</length>
    <type>Text</type>
</CustomField>