force-app/main/default/objects/bpats__ASM_Education_History__c/fields/bpats__School_Name__c.field-meta.xml
<CustomField>
    <fullName>bpats__School_Name__c</fullName>
    <label>School Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>