force-app/main/default/objects/bpats__ASM_Education_History__c/listViews/bpats__All.listView-meta.xml
<ListView>
    <fullName>bpats__All</fullName>
    <columns>NAME</columns>
    <columns>bpats__Major__c</columns>
    <columns>bpats__Degree_Name__c</columns>
    <columns>bpats__Degree_Type__c</columns>
    <columns>bpats__School_Name__c</columns>
    <columns>bpats__School_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>